force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <nameField>
        <displayFormat>PJ-{00000}</displayFormat>
        <label>Project No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>