force-app/main/default/objects/Project__c/fields/AccNo_OppNo__c.field-meta.xml
<CustomField>
    <fullName>AccNo_OppNo__c</fullName>
    <formula>Opportunity_Name__r.Account.Account_No__c &amp;&quot;-&quot;&amp;  Opportunity_Name__r.Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccNo.-OppNo.</label>
    <type>Text</type>
</CustomField>