force-app/main/default/objects/Project__c/fields/Available_to_planning_Hours__c.field-meta.xml
<CustomField>
    <fullName>Available_to_planning_Hours__c</fullName>
    <formula>Planned_Hours__c  -  Reserved_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto calculating by Contracted Hours - Planned Hours (the available man-hours to be planned (allocated))</inlineHelpText>
    <label>Available to planning (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>