force-app/main/default/objects/Project__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.Delivery</fullName>
                <color>#993399</color>
                <label>1.Delivery</label>
            </value>
            <value>
                <fullName>2.MA</fullName>
                <color>#CC66CC</color>
                <label>2.MA</label>
            </value>
            <value>
                <fullName>3.PreSales</fullName>
                <color>#3366FF</color>
                <label>3.PreSales</label>
            </value>
            <value>
                <fullName>4.Product Support</fullName>
                <color>#009900</color>
                <label>4.Product Support</label>
            </value>
            <value>
                <fullName>5.Our SF/PKG Development</fullName>
                <color>#66FF99</color>
                <label>5.Our SF/PKG Development</label>
            </value>
            <value>
                <fullName>6.Internal</fullName>
                <color>#999999</color>
                <label>6.Internal</label>
            </value>
            <value>
                <fullName>7.Study</fullName>
                <color>#FF6666</color>
                <label>7.Study</label>
            </value>
            <value>
                <fullName>9.Leave</fullName>
                <color>#FFFF66</color>
                <label>9.Leave</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>