force-app/main/default/objects/Project__c/fields/Estimation_WS__c.field-meta.xml
<CustomField>
    <fullName>Estimation_WS__c</fullName>
    <label>Estimation WS</label>
    <type>Url</type>
</CustomField>