force-app/main/default/objects/Project__c/fields/Exclude_VAT__c.field-meta.xml
<CustomField>
    <fullName>Exclude_VAT__c</fullName>
    <formula>Opportunity_Name__r.Exclude_VAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude VAT</label>
    <type>Checkbox</type>
</CustomField>