force-app/main/default/objects/Project__c/fields/GBD_ResourcePlanningStatus__c.field-meta.xml
<CustomField>
    <fullName>GBD_ResourcePlanningStatus__c</fullName>
    <label>GBD Resource Plan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>