force-app/main/default/objects/Project__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <formula>Opportunity_Name__r.NextStep</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Step</label>
    <type>Text</type>
</CustomField>