force-app/main/default/objects/Project__c/fields/Opp_No__c.field-meta.xml
<CustomField>
    <fullName>Opp_No__c</fullName>
    <formula>Opportunity_Name__r.Opportunity_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp-No</label>
    <type>Text</type>
</CustomField>