force-app/main/default/objects/Project__c/fields/Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of Man-Hour deal that the company have contracted with a customer. Maximum man-hours to be planned for a project. User should input the same number as a product amount under the opportunity.</inlineHelpText>
    <label>Contracted  (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>