force-app/main/default/objects/Project__c/fields/PrjNo_Name__c.field-meta.xml
<CustomField>
    <fullName>PrjNo_Name__c</fullName>
    <formula>Name &amp;&quot;:&quot;&amp; Project_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PrjNo+Name</label>
    <type>Text</type>
</CustomField>