force-app/main/default/objects/Project__c/fields/Probability_manual_input__c.field-meta.xml
<CustomField>
    <fullName>Probability_manual_input__c</fullName>
    <label>Probability (manual input)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>