force-app/main/default/objects/Project__c/fields/Project_Detail__c.field-meta.xml
<CustomField>
    <fullName>Project_Detail__c</fullName>
    <label>Project Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>