force-app/main/default/objects/Project__c/fields/Project_Name_for_Weekly__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_for_Weekly__c</fullName>
    <formula>CASE(RecordType.DeveloperName
,&quot;Charged&quot;, &quot;01.&quot; &amp;  Project_Name__c 
,&quot;Presale_Activities&quot;, &quot;02.&quot; &amp;  Project_Name__c 
,&quot;Internal&quot;, &quot;03.&quot; &amp;  Project_Name__c 
,&quot;Skill_Up&quot;, &quot;04.&quot; &amp; RecordType.Name
,&quot;99.&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name for Weekly</label>
    <type>Text</type>
</CustomField>