force-app/main/default/objects/Project__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Creating Proposal</fullName>
            </value>
            <value>
                <fullName>Proposal Submitted</fullName>
            </value>
            <value>
                <fullName>Handovered</fullName>
            </value>
            <value>
                <fullName>Planing</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Customize/Develop</fullName>
            </value>
            <value>
                <fullName>Testing(IT/ST)</fullName>
            </value>
            <value>
                <fullName>UAT/Education/Deployment</fullName>
            </value>
            <value>
                <fullName>in MA support</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Defect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>