force-app/main/default/objects/Project__c/fields/Proposal_Approach_Rev__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Approach_Rev__c</fullName>
    <label>Proposal Approach Review Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>