force-app/main/default/objects/Project__c/fields/Proposal_Approach_Rev_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Approach_Rev_Date__c</fullName>
    <label>Proposal Approach Review(PASS) Date</label>
    <type>Date</type>
</CustomField>