force-app/main/default/objects/Project__c/fields/Remain_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remain_Hours__c</fullName>
    <formula>Planned_Hours__c  -   Actual_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remain (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>