force-app/main/default/objects/Project__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <type>TextArea</type>
</CustomField>