force-app/main/default/objects/Project__c/fields/Reserved_Hours__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Amount of man hours has been allocated( planning) for the project. The amount of man hour will be accumulated since project started until currently.</inlineHelpText>
    <label>Planned (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>