force-app/main/default/objects/Project__c/fields/Reserved_Remain_Hours__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Remain_Hours__c</fullName>
    <formula>Reserved_Hours__c -    Actual_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserved Remain (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>