force-app/main/default/objects/Project__c/fields/SA_Support__c.field-meta.xml
<CustomField>
    <fullName>SA_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SA Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>