force-app/main/default/objects/Project__c/fields/Solution_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Approval_Date__c</fullName>
    <label>Solution Approval Date</label>
    <type>Date</type>
</CustomField>