force-app/main/default/objects/Project__c/fields/Solution_Approve__c.field-meta.xml
<CustomField>
    <fullName>Solution_Approve__c</fullName>
    <label>Solution Approve Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>