force-app/main/default/objects/Project__c/fields/Solution_Overview__c.field-meta.xml
<CustomField>
    <fullName>Solution_Overview__c</fullName>
    <inlineHelpText>Please input Salesforce Solution Overview 
Ex.
Nonprofit Cloud+Service Cloud to support Donattion and Sourvenior requirement</inlineHelpText>
    <label>Solution Overview</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>