force-app/main/default/objects/Project__c/fields/Weekly_Progress__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Progress__c</fullName>
    <inlineHelpText>Please input your update progress this week. 
Ex.
[W1Jan] Explore Salesfore Maps and OthersSolution
[W3Feb] Check Point Solution &amp; Price 28 Feb</inlineHelpText>
    <label>Weekly Progress</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>