force-app/main/default/objects/Project__c/recordTypes/Charged.recordType-meta.xml
<RecordType>
    <fullName>Charged</fullName>
    <active>true</active>
    <description>For charged project. you can create the Project record by change Opportunity stage to &quot;Close Won&quot;</description>
    <label>Charged</label>
</RecordType>