force-app/main/default/objects/Project__c/recordTypes/non_Charged.recordType-meta.xml
<RecordType>
    <fullName>non_Charged</fullName>
    <active>true</active>
    <description>Use &quot;Internal&quot;  instead of &quot;non-Charged&quot;</description>
    <label>non-Charged</label>
</RecordType>