force-app/main/default/objects/Project__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>For internal project, you can create the Project record by &quot;New&quot; button    ex- &quot;Internal&quot;</description>
    <label>Other</label>
</RecordType>