force-app/main/default/objects/Project__c/recordTypes/Presale_Activities.recordType-meta.xml
<RecordType>
    <fullName>Presale_Activities</fullName>
    <active>true</active>
    <description>Presale Activities (Requirement Gathering,Presale DEMO,Proposal Creation and Win Opportunity)</description>
    <label>Presale Activities</label>
</RecordType>