force-app/main/default/objects/Project__c/recordTypes/Skill_Up.recordType-meta.xml
<RecordType>
    <fullName>Skill_Up</fullName>
    <active>false</active>
    <description>For team member skill up, you can create the Project record by &quot;New&quot; button</description>
    <label>Skill Up</label>
</RecordType>