force-app/main/default/objects/Project__c/validationRules/CANNOT_UPDATE_CLOSED_PROJECT.validationRule-meta.xml
<ValidationRule>
    <fullName>CANNOT_UPDATE_CLOSED_PROJECT</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( NOT(ISCHANGED(Project_Status__c)),
TEXT(Project_Status__c) = &apos;Closed&apos;)</errorConditionFormula>
    <errorMessage>CANNOT update the closed project record.Please contact to the Engineer Manager.</errorMessage>
</ValidationRule>