force-app/main/default/objects/Project__c/listViews/Expired_Projects.listView-meta.xml
<ListView>
    <fullName>Expired_Projects</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Project_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Planned_Hours__c</columns>
    <columns>Actual_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>02.Expired Projects</label>
</ListView>