force-app/main/default/objects/Project__c/listViews/nonCharged_Projects.listView-meta.xml
<ListView>
    <fullName>nonCharged_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Project_Status__c</columns>
    <columns>Planned_Hours__c</columns>
    <columns>Actual_Hours__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.non_Charged</value>
    </filters>
    <filters>
        <field>Account_Name__c</field>
        <operation>notEqual</operation>
        <value>Test</value>
    </filters>
    <label>14.non-Charged Projects</label>
</ListView>