force-app/main/default/objects/Project__c/listViews/Open_Projects.listView-meta.xml
<ListView>
    <fullName>Open_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Category__c</columns>
    <columns>Project_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Start_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Planned_Hours__c</columns>
    <columns>Actual_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>01.Open Projects</label>
</ListView>