force-app/main/default/objects/Project__c/listViews/Other_Projects.listView-meta.xml
<ListView>
    <fullName>Other_Projects</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Project_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Category__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Planned_Hours__c</columns>
    <columns>Actual_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Other</value>
    </filters>
    <filters>
        <field>Account_Name__c</field>
        <operation>notEqual</operation>
        <value>Test</value>
    </filters>
    <label>15.Other Projects</label>
</ListView>